# spark_etl_project

./: Dockerfile  docker_compose.yaml  main.py  pyproject.toml
jobs/: run_etl.py
src/ingest/: get_data.py
src/load/: write_to_delta.py
src/transform/: clean_and_parse.py  spark_session.py
